<resources>
    <string name="app_name">Entertaino</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="foodies">Foodies</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="ic_profile">ic_profile</string>
    <string name="ua">UA</string>
    <string name="Book">Book</string>
    <string name="rules">Rules</string>
    <string name="about">About Us</string>
    <string name="Go">Go</string>

    <string name="about_text">Entertaino helps you to book your favourite movies that you would love to watch.
        \n\nSo enjoy watching with our Entertaino by booking movies!</string>
    <string name="rules_text">First you need to Register your self with Entertaino.
        \n\nAnd login app lets you in you can watch latest trending movies available in movies section.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
