<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.shradha.entertaino.moviescreens.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".moviescreens.login.LoginFragment">

        <TextView
            style="@style/FoodiesTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rlLogin"
            android:drawableTop="@drawable/movie_outline_icon"
            android:gravity="center"
            android:text="@string/login" />

        <RelativeLayout
            android:id="@+id/rlLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/dimen30sp"
            android:layout_marginRight="@dimen/dimen30sp"
            android:background="@drawable/border_login"
            android:elevation="@dimen/dimen10sp"
            android:orientation="vertical"
            android:padding="@dimen/dimen10sp"
            android:visibility="visible"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    style="@style/UsernameTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/username"
                    android:drawableLeft="@drawable/ic_profile"
                    android:drawablePadding="@dimen/dimen5sp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColorHint="@color/colorAccent"
                    tools:ignore="RtlHardcoded" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/UsernameTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/password"
                    android:drawableLeft="@drawable/ic_pass"
                    android:drawablePadding="@dimen/dimen5sp"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:textColorHint="@color/colorAccent"
                    tools:ignore="RtlHardcoded" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlLogin"
            android:layout_marginTop="@dimen/dimen30sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/border_register_text"
                android:text="@string/register_text"
                android:theme="@style/RegisterTextTheme" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/border_login_text"
                android:text="@string/login_text"
                android:theme="@style/LoginTextTheme"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </RelativeLayout>
</layout>